--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Eraskon. All rights reserved.</p>
+    <p>&copy; 2025 Eraskon. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
@@ -526,7 +526,7 @@
           // Role-based redirect
           const redirectMap = { 
             admin: "stats.html", 
-            inventory: "stock-movement.html", 
+            inventory: "stock.html", 
             sales: "store.html", 
             warehouse: "warehouse.html", 
             finance: "approve.html", 
@@ -620,7 +620,8 @@
       const newPassword = document.getElementById('newPwd').value;
       const confirmNewPassword = document.getElementById('confirmNewPwd').value;
 
-      if (newPassword !== confirmPassword) {
+      // FIXED: Changed confirmPassword to confirmNewPassword
+      if (newPassword !== confirmNewPassword) {
         setFormState(completeResetForm, 0); 
         return showMessage("completeResetMessageBox", "Passwords do not match.", "error");
       }
