--- a/chairman.html
+++ b/chairman.html
@@ -13,7 +13,16 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
-
+ <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Chairman Dashboard",
+      desc: "Access the Eraskon Inventory portal to view and manage chairman dashboard features.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Sales, Chairman Dashboard"
+    });
+  </script>
   <style>
         /* ------------------------------------------- */
         /* 1. Chairman Navigation & Tabs               */
